MGDOBR-144: fix BridgeWorkerTest